--- a/apps/static/assets/css/temperature.css
+++ b/apps/static/assets/css/temperature.css
@@ -6,42 +6,41 @@
   user-select: none;
 }
 
-#wrapper {
+.sensor_temp {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-#info {
+.info {
   opacity: 0.2;
   margin: 0;
   text-align: center;
 }
 
-#termometer {
+.termometer {
   width: 25px;
   background: #38383f;
-  height: 240px;
   position: relative;
   border: 9px solid #2a2a2e;
   border-radius: 20px;
   z-index: 1;
   margin-bottom: 50px;
 }
-#termometer:before, #termometer:after {
+.termometer:before, .termometer:after {
   position: absolute;
   content: "";
   border-radius: 50%;
 }
-#termometer:before {
+.termometer:before {
   width: 100%;
   height: 34px;
   bottom: 9px;
   background: #38383f;
   z-index: -1;
 }
-#termometer:after {
+.termometer:after {
   transform: translateX(-50%);
   width: 50px;
   height: 50px;
@@ -51,23 +50,23 @@
   z-index: -3;
   left: 50%;
 }
-#termometer #graduations {
+.termometer .graduations {
   height: 59%;
   top: 20%;
   width: 50%;
 }
-#termometer #graduations, #termometer #graduations:before {
+.termometer .graduations, .termometer .graduations:before {
   position: absolute;
   border-top: 2px solid rgba(0, 0, 0, 0.5);
   border-bottom: 2px solid rgba(0, 0, 0, 0.5);
 }
-#termometer #graduations:before {
+.termometer .graduations:before {
   content: "";
   height: 34%;
   width: 100%;
   top: 32%;
 }
-#termometer #temperature {
+.termometer .temperature {
   bottom: 0;
   background: linear-gradient(#f17a65, #3dcadf) no-repeat bottom;
   width: 100%;
@@ -75,10 +74,10 @@
   background-size: 100% 240px;
   transition: all 0.2s ease-in-out;
 }
-#termometer #temperature, #termometer #temperature:before, #termometer #temperature:after {
+.termometer .temperature, .termometer .temperature:before, .termometer .temperature:after {
   position: absolute;
 }
-#termometer #temperature:before {
+.termometer .temperature:before {
   content: attr(data-value);
   background: rgba(0, 0, 0, 0.7);
   color: white;
@@ -91,7 +90,7 @@
   left: calc(100% + 1em / 1.5);
   top: calc(-1em + 5px - 5px * 2);
 }
-#termometer #temperature:after {
+.termometer .temperature:after {
   content: "";
   border-top: 0.4545454545em solid transparent;
   border-bottom: 0.4545454545em solid transparent;
@@ -100,13 +99,13 @@
   top: calc(-1em / 2.2 + 5px);
 }
 
-#playground {
+.playground {
   font-size: 1.1em;
 }
-#playground #range {
+.playground .range {
   display: flex;
 }
-#playground #range input[type=text] {
+.playground .range input[type=text] {
   width: 2em;
   background: transparent;
   border: none;
@@ -118,19 +117,19 @@
   border-bottom: 2px solid transparent;
   transition: all 0.2s ease-in-out;
 }
-#playground #range input[type=text]:focus {
+.playground .range input[type=text]:focus {
   border-color: #3dcadf;
   outline: none;
 }
-#playground #range input[type=text]:first-child {
+.playground .range input[type=text]:first-child {
   text-align: right;
 }
-#playground #unit {
+.playground .unit {
   width: 100%;
   margin: 0;
   text-align: center;
 }
-#playground #unit:hover {
+.playground .unit:hover {
   cursor: pointer;
 }
 
