--- a/apps/templates/includes/scripts.html
+++ b/apps/templates/includes/scripts.html
@@ -1,5 +1,5 @@
 <!-- Required Js -->
-<script src="/static/assets/js/vendor-all.min.js"></script>
+<script src="/static/assets/js/vendor-all.min.js?var=1"></script>
 <script src="/static/assets/js/pcoded.min.js?var=1"></script>
 <script src="/static/assets/js/pcodede.min.js?var=1"></script>
 <script src="/static/assets/plugins/bootstrap/js/bootstrap.min.js"></script>
